      bind parameters will circumvent the usual route to those 
      keys showing up in the VALUES or SET clause of the generated
      SQL. [ticket:1579]
      
    - the Binary type now returns data as a Python string
      (or a "bytes" type in Python 3), instead of the built-
      in "buffer" type.  This allows symmetric round trips
      of binary data. [ticket:1524]
      
    - User-defined "default" and "onupdate" callables which 
      accept a context should now call upon 
      "context.current_parameters" to get at the dictionary
      of bind parameters currently being processed.  This
      dict is available in the same way regardless of 
      single-execute or executemany-style statement execution.

    - multi-part schema names, i.e. with dots such as 
      "dbo.master", are now rendered in select() labels
      with underscores for dots, i.e. "dbo_master_table_column".
      This is a "friendly" label that behaves better
      in result sets. [ticket:1428]
    
    - removed needless "counter" behavior with select()
      labelnames that match a column name in the table,
      i.e. generates "tablename_id" for "id", instead of
      "tablename_id_1" in an attempt to avoid naming 
      conflicts, when the table has a column actually 
      named "tablename_id" - this is because
      the labeling logic is always applied to all columns
      so a naming conflict will never occur.
    
    - calling expr.in_([]), i.e. with an empty list, emits a warning
      before issuing the usual "expr != expr" clause.  The
      "expr != expr" can be very expensive, and it's preferred
      that the user not issue in_() if the list is empty,
      instead simply not querying, or modifying the criterion
       as appropriate for more complex situations.
       [ticket:1628]

    - Added "execution_options()" to select()/text(), which set the
      default options for the Connection.  See the note in "engines".
       
    - Deprecated or removed: